<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main activity -->
    <string name="app_name">AXABeacon</string>
    <string name="button_scan">Scan</string>
    <string name="title_device_list">Device List</string>
    <string name="device">Device</string>
    <string name="header">Available BLE Devices</string>
    <string name="disconnected">Device is not connected</string>
    <string name="control">Done</string>
    <string name="bt_not_supported">Bluetooth is not supported</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bt_on">Bluetooth was turned  on</string>
    <string name="bt_not_on">Bluetooth was not turned on</string>
    <string name="app_closing">Exiting BLE SensorTag app</string>
    <string-array name="device_filter"><item>MyTag</item></string-array>
    <string name="nodevice">There are no SensorTags advertising within range. Please push the side button on the SensorTag to start advertising.</string>
    <string name="scan_advice">The Android device is not scanning. Please tap \'Scan\' to scan for SensorTags.</string>
    
    <!-- Options menu -->
    <string name="prefs">Preferences</string>
    <string name="fwupdate">Firmware update</string>
    <string name="bt">Bluetooth Adapter</string>
    <string name="sthome">SensorTag Home</string>
    <string name="tie2e">TI E2E Community</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <!-- Device activity -->
    <string name="dev_addr">Device address</string>
    <string name="image">Image</string>
    
    <!-- Sensor names-->
    <string name="keys">Keys</string>
    <string name="acc">Accelerometer</string>
    <string name="mag">Magnetometer</string>
    <string name="gyro">Gyroscope</string>
    <string name="hum">Humidity</string>
    <string name="bar">Barometer</string>
    <string name="tAmb">Ambience Temperature</string>
    <string name="tObj">Object Temperature</string>
    
    <!-- Sensor misc. -->
    <string name="xyz3">x:\ny:\nz:\n</string>
    <string name="empty3">*\n*\n*\n</string>
    <string name="unitDegSec3">deg/s\ndeg/s\ndeg/s\n</string>
    <string name="unitG3">g\ng\ng\n</string>
    <string name="unitT3">uT\nuT\nuT\n</string>
    
    <string name="empty1">*\n</string>
    <string name="unitDeg">deg/C\n</string>
    <string name="unitRH">%rH\n</string>
    <string name="unitPA_Meter">nPA\nmeter</string>

    <!-- FWUpdate activity -->
    <string name="title_oad">Firmware update (OAD)</string>
    <string name="start_prog">Start programming</string>
    <string name="cancel">Cancel</string>
    <string name="prog_ogoing">NB! Not permitted to close this view during OAD transfer</string>
    <string name="load_image_a">Image A</string>
    <string name="load_image_b">Image B</string>
    <string name="load_image_c">Custom</string>
    <string name="no_image">Not an OAD image</string>
    <string name="no_image_sel">No image selected</string>
    <string name="new_image">New image:</string>
    <string name="cur_image">Current image:</string>
    <string name="idle">idle</string>
    <string name="btn_txt_confirm">Confirm</string>
    
    
    
    <!-- Infoactivity -->
    <string name="clear_list">清空列表</string>
    <string name="enter_the_connection_mode">请进入连接模式</string>
    <string name="Correct">正确</string>
    <string name="Please_input_32bit">错误请输入32位</string>
    <string name="UUID_must_be_32">uuid必须为32位</string>
    <string name="Period_must_be_greater_than_100">period必须大于100</string>
    <string name="The_value_cannot_be_empty"> 数值不能为空</string>
    <string name="Disconnect">连接断开</string>
    <string name="Connected">连接成功</string>
    <string name="Enable">启用</string>
    
    <string name="Shutdown">关机</string>
    <string name="six_pwd">密码必须为6位</string>
    <string name="pwd_error">密码错误</string>
    <string name="value_empty">数值不能为空</string>
    
    
    <string name="title1">智 能 无 线 开 拓 者</string>
    <string name="title2">让安全,快乐,健康的信号传递天下人</string>
    <string name="company">奥星澳科技有限公司</string>
    <string name="name">吴 志 勇</string>
    <string name="phone">13823201215</string>
    <string name="Email">wuzy@axaet.com</string>
    <string name="Website">www.axaet.com</string>
    <string name="zuoji">4000-366-525</string>
    <string name="address">广东省深圳市龙华新区明治大道深国际华通源物流中心C2栋6楼</string>
    

</resources>